[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"

rayon = "1.10.0"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.140" }
env_logger = "0.11.7"
log = "0.4.27"

